@@ -56,7 +56,7 @@
 	</P>
       </LI>
       <LI><P><A HREF="tao/smartproxies/index.html">TAO_SmartProxies:
-	  </A>n
+	  </A>
 	  TAO's smart proxies support library.
 	</P>
       </LI>
@@ -68,6 +68,11 @@
       <LI><P><A HREF="tao/iortable/index.html">TAO_IORTable:
 	  </A>
 	  TAO's ad-hoc adapter for simple Object Keys.
+	</P>
+      </LI>
+      <LI><P><A HREF="tao/strategies/index.html">TAO_Strategies:
+	  </A>
+	  Additional configuration options and protocols for TAO.
 	</P>
       </LI>
     </UL>
@@ -95,6 +100,11 @@
       <LI><P><A HREF="tao/av/index.html">TAO_AV:
 	  </A>
 	  TAO's Audio/Video Streaming Service implementation.
+	</P>
+      </LI>
+      <LI><P><A HREF="tao/ssliop/index.html">TAO_SSLIOP:
+	  </A>
+	  TAO's SSLIOP protocol implementation.
 	</P>
       </LI>
     </UL>
